# py-stadfangaskra

./: .coveragerc  .envrc  .gitignore  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  pythonpackage.yml  update-db.yaml
preprocess/: __main__.py  config.py
stadfangaskra/: __init__.py  lookup.py  matches.py  parser.py  static.py  tree.py  version.py
stadfangaskra/data/: df.parquet.gzip  regions.parquet
tests/: conftest.py  test_duplicates.py  test_lookup.py  test_matches.py  test_pd_api_extension.py
