[metadata]
name = py-stadfangaskra
description = Icelandic Location Registry utils
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/StefanKjartansson/py-stadfangaskra
author = Stefán Kjartansson
author_email = stefan.mar.kjartansson@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console    
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/StefanKjartansson/py-stadfangaskra

[options]
zip_safe = False
packages = stadfangaskra
platforms = any
include_package_data = True
install_requires =
    pandas >=1.3.5
    pyarrow >=6.0.1
    geopandas >=0.10.2
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.package_data]
stadfangaskra = 
    "*.parquet"
    "*.parquet.gzip"

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    pytest >= 6.2.5
    pytest-datadir
    pytest-cov    
    coverage
dev =
    %(test)s
    black
    isort
    pylint
all =
    %(test)s    
    %(dev)s

[tool.isort]
profile = "black"
src_paths = ["stadfangaskra", "tests"]

[tool:pytest]
collect_ignore = ['setup.py']
norecursedirs = .* build dist docs

[coverage:run]
omit =
    stadfangaskra/version.py